--- a/Baloons-Pop-1/PoppingBaloons.csproj
+++ b/Baloons-Pop-1/PoppingBaloons.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{8940EF8B-A71D-4F14-8888-1AAE9ACEFDC6}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PoppingBaloons</RootNamespace>
+    <RootNamespace>Telerik.PoppingBaloons</RootNamespace>
     <AssemblyName>PoppingBaloons</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
+    <Folder Include="Telerik.PoppingBaloons\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
