--- a/Baloons-Pop-1/PoppingBaloons.csproj
+++ b/Baloons-Pop-1/PoppingBaloons.csproj
@@ -15,7 +15,7 @@
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -44,8 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Telerik.PoppingBaloons\baloonsState.cs" />
-    <Compile Include="Telerik.PoppingBaloons\GameState.cs" />
-    <Compile Include="Telerik.PoppingBaloons\Program.cs" />
+    <Compile Include="Telerik.PoppingBaloons\GameUI.cs" />
+    <Compile Include="Telerik.PoppingBaloons\GameExecution.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
