--- a/PoppingBaloons.Test/PoppingBaloons.Test.csproj
+++ b/PoppingBaloons.Test/PoppingBaloons.Test.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="GameUITests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="BaloonsGameTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Baloons-Pop-1\PoppingBaloons.csproj">
